--- a/index.html
+++ b/index.html
@@ -32,16 +32,54 @@
 <body>
   <h1>ICASSP 2021 M2VoC challenge results</h1>
 
+  <p>
+  <h2>Track 1</h2>
+  <hr>
   <div>
-    <b>
-      <a href="results/Track1">Track 1</a>
-    </b>
+    <table style="width: 100%">
+      <tr>
+        <td style="text-align: center"><b><a href="Track1_S3_chat.html">Speaker 3 chat set</a></b></td>
+        <td style="text-align: center"><b><a href="Track1_S4_game.html">Speaker 4 game set</a></b></td>
+        <td style="text-align: center"><b><a href="Track1_S5_story.html">Speaker 5 story set</a></b></td>
+      </tr>
+      <tr>
+        <td style="text-align: center"><b><a href="Track1_S3_common.html">Speaker 3 common set</a></b></td>
+        <td style="text-align: center"><b><a href="Track1_S4_common.html">Speaker 4 common set<a></b></td>
+        <td style="text-align: center"><b><a href="Track1_S5_common.html">Speaker 5 common set</a></b></td>
+      </tr>
+      <tr>
+        <td style="text-align: center"><b><a href="Track1_S3_intelligibility.html">Speaker 3 intelligibility set</a></b>
+        </td>
+        <td style="text-align: center"><b><a href="Track1_S4_intelligibility.html">Speaker 4 intelligibility set</a></b>
+        </td>
+        <td style="text-align: center"><b><a href="Track1_S5_intelligibility.html">Speaker 5 intelligibility set</a></b>
+        </td>
+      </tr>
+    </table>
   </div>
+  </p>
+
+  <p>
+  <h2>Track 2</h2>
+  <hr>
   <div>
-    <b>
-      <a href="results/Track2">Track 2</a>
-    </b>
+    <table style="width: 100%">
+      <tr>
+        <td style="text-align: center"><b><a href="Track2_S3_common.html">Speaker 3 common set</a></b></td>
+        <td style="text-align: center"><b><a href="Track2_S4_common.html">Speaker 4 common set<a></b></td>
+        <td style="text-align: center"><b><a href="Track2_S5_common.html">Speaker 5 common set</a></b></td>
+      </tr>
+      <tr>
+        <td style="text-align: center"><b><a href="Track2_S3_intelligibility.html">Speaker 3 intelligibility set</a></b>
+        </td>
+        <td style="text-align: center"><b><a href="Track2_S4_intelligibility.html">Speaker 4 intelligibility set</a></b>
+        </td>
+        <td style="text-align: center"><b><a href="Track2_S5_intelligibility.html">Speaker 5 intelligibility set</a></b>
+        </td>
+      </tr>
+    </table>
   </div>
+  </p>
 </body>
 
 </html>
